--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "George Mamaladze",
+  "bugs": {
+    "url": "https://github.com/subsento/node-mines/issues"
+  },
+  "homepage": "https://github.com/subsento/node-mines#readme",
+  "repository": "https://github.com/subsento/node-mines",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.1",
